--- a/src/ABPProject.EntityFrameworkCore/ABPProject.EntityFrameworkCore.csproj
+++ b/src/ABPProject.EntityFrameworkCore/ABPProject.EntityFrameworkCore.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.1" />
+    <PackageReference Include="TimeZoneConverter" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ABPProject.Core\ABPProject.Core.csproj" />
