--- a/src/ABPProject.Migrator/appsettings.json
+++ b/src/ABPProject.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=LAPTOP-B67MO9P3; Database=ABPProjectDb; Trusted_Connection=True;"
+    "Default": "Server=112.78.2.174,1433;Initial Catalog=gia47606_kltn;Persist Security Info=False;User ID=gia47606_kltn;Password=qI8e?c56;MultipleActiveResultSets=True; Encrypt=True;TrustServerCertificate=True;Connection Timeout=60;"
   }
 }
